--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,37 @@
 akka {
   loglevel = DEBUG
 }
+
+my-dispatcher {
+  type = Dispatcher
+  execuror = thread-pool-executor
+  thread-pool-executor {
+    fixed-pool-size = 3
+  }
+  throughput = 30
+}
+
+akka.actor.deployment {
+  /my-dispatcher-from-config {
+    dispatcher = my-dispatcher
+  }
+}
+
+
+# mailbox demo
+mailboxesDemo {
+  # attach mailbox to a dispatcher
+  support-ticket-dispatcher {
+    mailbox-type = "section6.Mailboxes$SupportTicketPriorityMailbox"
+  }
+  control-mailbox {
+    mailbox-type = "akka.dispatch.UnboundedControlAwareMailbox"
+  }
+
+  akka.actor.deployment {
+    /altControlAwareActor {
+      mailbox = control-mailbox
+    }
+
+  }
+}
